--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
 	"description": "An FCC Backend Challenge",
 	"main": "server.js",
 	"scripts": {
+		"devStart": "nodemon server.js",
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.0",
+		"dotenv": "^8.2.0",
 		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"mongodb": "^3.5.5",
+		"mongoose": "^5.9.7"
 	},
 	"engines": {
 		"node": "4.4.5"
@@ -23,5 +27,8 @@
 		"express",
 		"freecodecamp"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^2.0.2"
+	}
 }
