--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"cors": "^2.8.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.12.4",
-		"mongodb": "^3.5.5",
-		"mongoose": "^5.9.7"
+		"moment": "^2.24.0"
 	},
 	"engines": {
 		"node": "4.4.5"
